--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -2,7 +2,7 @@ name: First Workflow
 on: workflow_dispatch
 jobs:
   first-job:
-    runs-on: ubunt-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Print greeting
         run: echo "Hellow World!"
